outlined new message mappings